# NoiseBox

./: .gitignore  LICENSE  NOISEBOX_PROJECT.md  NOISEBOX_UI.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: index.html
public/sounds/: README.md
scripts/: download-bundled-sounds.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/audio/: engine.ts  sounds.ts
src/components/: ApiKeysModal.tsx  Bin.tsx  BottomBar.tsx  Canvas.tsx  OrbitCanvas.tsx  PresetModal.tsx  SearchPanel.tsx  SoundCard.tsx  TimerModal.tsx  Toggle.tsx  TopBar.tsx  WaveBars.tsx
src/hooks/: useAudio.ts  usePreview.ts  useTimer.ts
src/lib/: audioDownloader.ts  presets.ts
src/store/: downloadStore.ts  downloadedSoundsStore.ts  presetStore.ts  settingsStore.ts  soundStore.ts
src/types/: index.ts
